overflows fixed

--- a/components/styles.css
+++ b/components/styles.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   overflow-x: hidden;
+  overflow-y: hidden;
   height: 100vh;
 }
 
